Converted the library to use .NET Standard 1.1 for broader compatibility. Uses Dictionary<string, string> instead of Hashtable. Removed BufferedStream as standard streams are already buffered. Change to use text encoding name as code page number not supported.

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,8 @@ publish/
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
 packages/*
 *.nupkg
+project.lock.json
+
 ## TODO: If the tool you use requires repositories.config, also uncomment the next line
 #!packages/repositories.config
 
