Remove appveyor platform setting - was Any CPU with a space.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,7 +53,7 @@ nuget:
 #---------------------------------# 
  
 # build platform, i.e. x86, x64, Any CPU. This setting is optional. 
-platform: Any CPU 
+# platform:
 
 # build Configuration, i.e. Debug, Release, etc.
 before_build:
