--- a/Kajabity.Tools.Java/Kajabity.Tools.Java.nuspec
+++ b/Kajabity.Tools.Java/Kajabity.Tools.Java.nuspec
@@ -1,18 +1,25 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <id>Kajabity.Tools.Java</id>
+    <version>0.1.0.0</version>
+    <title>Kajabity.Tools.Java</title>
+    <description>Classes to read and write Java style “.properties” files in .NET applications.</description>
+    <authors>Williams Technologies Limited</authors>
+    <owners>Williams Technologies Limited</owners>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>http://kajabity.com/kajabity-tools/java-properties-classes/</projectUrl>
     <iconUrl>http://kajabity.com/images/logo-57x57.png</iconUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
+    <copyright>Copyright © 2009-10 Williams Technologies Limited.</copyright>
     <releaseNotes>Converted to use .NET Standard 1.1 for broader compatibility.</releaseNotes>
-    <copyright>Copyright © 2009-17 Williams Technologies Limited.</copyright>
     <tags>Java Properties</tags>
   </metadata>
+  <files>
+    <file src="bin\*\netstandard1.0\Kajabity.Tools.Java.dll"     target="lib\netstandard1.0" />
+    <file src="bin\*\netstandard1.0\Kajabity.Tools.Java.dll.mdb" target="lib\netstandard1.0" />
+    <file src="bin\*\netstandard1.0\Kajabity.Tools.Java.xml"     target="lib\netstandard1.0" />
+    <file src="bin\*\net20\Kajabity.Tools.Java.dll"              target="lib\net20" />
+    <file src="bin\*\net20\Kajabity.Tools.Java.xml"              target="lib\net20" />
+  </files>
 </package>
