--- a/Kajabity.Tools.Java/Kajabity.Tools.Java.csproj
+++ b/Kajabity.Tools.Java/Kajabity.Tools.Java.csproj
@@ -2,18 +2,39 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net20;netstandard1.0;netstandard1.1</TargetFrameworks>
+    <!-- Assembly info properties -->
+    <AssemblyName>Kajabity.Tools.Java</AssemblyName>
+    <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
+    <AssemblyProduct>$(AssemblyTitle)</AssemblyProduct>
+    <AssemblyCompany>Williams Technologies Limited</AssemblyCompany>
+    <Copyright>Copyright © 2009-18 $(AssemblyCompany).</Copyright>
+    <Authors>$(AssemblyCompany)</Authors>
+    <Description>Classes to read and write Java style “.properties” files in .NET applications.</Description>
+    <!-- Versioning properties -->
+    <Build>$([System.DateTime]::op_Subtraction($([System.DateTime]::get_Now().get_Date()),$([System.DateTime]::new(2000,1,1))).get_TotalDays())</Build>
+    <Revision>$([MSBuild]::Divide($([System.DateTime]::get_Now().get_TimeOfDay().get_TotalSeconds()), 2).ToString('F0'))</Revision>
+    <Version>0.1.$(Build).$(Revision)</Version>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <AssemblyFileVersion>$(Version)</AssemblyFileVersion>
+    <AssemblyInformationalVersion>$(Version)</AssemblyInformationalVersion>
+    <!-- nuget package properties -->
+    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <PackageProjectUrl>http://kajabity.com/kajabity-tools/java-properties-classes/</PackageProjectUrl>
+    <PackageIconUri>http://kajabity.com/images/logo-57x57.png</PackageIconUri>
+    <PackageIconUrl>$(PackageIconUri)</PackageIconUrl><!-- This will be deprecated in favour of the above tag -->
+    <PackageTags>Java Properties</PackageTags>
+    <PackageVersion>$(Version)</PackageVersion>
   </PropertyGroup>
   <Import Project="MultiTargetFrameworkSupport.targets" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <!-- <GenerateAssemblyInfo>false</GenerateAssemblyInfo> -->
     <Deterministic>false</Deterministic>
     <ProjectGuid>{4CF13660-95BA-482C-BA3E-BF97B9624F19}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Kajabity.Tools</RootNamespace>
-    <AssemblyName>Kajabity.Tools.Java</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -29,8 +50,6 @@
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
     <AssemblyOriginatorKeyFile>Kajabity.Tools.Java.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
