Switch from BinaryReader to StreamReader. Add a test for UTF8 with BOM.

--- a/Kajabity.Tools.Java.Test/Kajabity.Tools.Java.Test.csproj
+++ b/Kajabity.Tools.Java.Test/Kajabity.Tools.Java.Test.csproj
@@ -72,6 +72,11 @@
       <Name>Kajabity.Tools.Java</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Test Data\Java\utf8-with-BOM.properties">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
