ISSUE-7 Fixed handling of line wrapping inside unicode escape.
Added specific reader tests and completed all of the reader tests.
Added detailed set of Writer tests - and compared with Java equivalents.

--- a/Kajabity.Tools.Java.Test/Kajabity.Tools.Java.Test.csproj
+++ b/Kajabity.Tools.Java.Test/Kajabity.Tools.Java.Test.csproj
@@ -54,9 +54,6 @@
     <None Include="Test Data\Java\line-breaks.properties">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Test Data\Java\mixed.properties">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="Test Data\Java\non-ascii-symbols-native2ascii.properties">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -77,6 +74,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Update="Test Data\Java\line-break-unicode.properties">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Test Data\Java\urls.properties">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Test Data\Java\utf8-with-BOM.properties">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
