Updated NuGet API Key for AppVeyor build.
Tweaks to README and .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -196,6 +196,9 @@ FakesAssemblies/
 # Windows detritus
 # =========================
 
+# IntelliJ
+.idea
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
