--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@
 #---------------------------------# 
 
 # tell appveyor to use MSBuild 15.0 or higher
-image: Visual Studio 2017
+image: Visual Studio 2019
  
 # version format 
 version: 0.3-{build}
@@ -76,9 +76,10 @@ build:
 #---------------------------------# 
 #      artifacts configuration    # 
 #---------------------------------# 
- 
-artifacts:
-    - path: Kajabity.Tools.Java\bin\$(configuration)\Kajabity.Tools.Java.dll
+
+# Artifacts picked up by nuget deployment and includes all DLL variants for each .NET version.
+#artifacts:
+#    - path: Kajabity.Tools.Java\bin\$(configuration)\Kajabity.Tools.Java.dll
 
 #---------------------------------# 
 #     deployment configuration    # 
@@ -88,11 +89,12 @@ artifacts:
 # provider names are case-sensitive! 
 
 deploy:
+    # Secure tokens created using https://ci.appveyor.com/tools/encrypt
 
-    # Deploying to NuGet feed
+    # Deploying to NuGet feed - using API Key from NuGet.org.
   - provider: NuGet
     api_key:
-        secure: drPMQzMDYH6xwdC/HBy5T+u38+QnGK1qnOoJBXIDJcIUPo2uiFKlTTuSeNSkCRM5
+        secure: /krWqaRScBfc2rXdSaHGIW9wZF8c6SgQO1rZnBSrQ4yZHNDjiarIjrm+E5rmO6+p
     skip_symbols: true
     artifact: /.*\.nupkg/
     on:
